[gd_scene load_steps=6 format=3 uid="uid://viml08d7w1pc"]

[ext_resource type="Texture2D" uid="uid://bjwqcfgh3x5ou" path="res://Assets/colored-transparent_packed.png" id="1_am0wf"]
[ext_resource type="Script" uid="uid://b41vt3k452dhb" path="res://World/Environment/Features/Goal/goal.gd" id="1_yldyy"]
[ext_resource type="PackedScene" uid="uid://be3vsklviq1tp" path="res://Components/HealthComponent/health_component.tscn" id="3_ufa6t"]
[ext_resource type="AudioStream" uid="uid://faq2x75k5tx7" path="res://Assets/Audio/SFX/goal_reached.wav" id="4_qcqvg"]

[sub_resource type="AtlasTexture" id="AtlasTexture_oyd80"]
atlas = ExtResource("1_am0wf")
region = Rect2(656, 288, 16, 16)

[node name="Goal" type="Node2D"]
script = ExtResource("1_yldyy")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = SubResource("AtlasTexture_oyd80")

[node name="HealthComponent" parent="." instance=ExtResource("3_ufa6t")]
max_health = 100.0

[node name="GoalReached" type="AudioStreamPlayer" parent="."]
unique_name_in_owner = true
stream = ExtResource("4_qcqvg")
volume_db = -4.0

[node name="ProgressBar" type="ProgressBar" parent="."]
custom_minimum_size = Vector2(64, 0)
offset_left = -32.0
offset_top = -14.0
offset_right = 32.0
offset_bottom = -8.0
show_percentage = false

[connection signal="damage_taken" from="HealthComponent" to="." method="_on_health_component_damage_taken"]
